--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,19 @@
-attrs==23.2.0
-certifi==2024.2.2
-cffi==1.16.0
+blinker==1.8.2
+click==8.1.7
 colorama==0.4.6
-exceptiongroup==1.2.1
-h11==0.14.0
+dnspython==2.6.1
+email_validator==2.1.1
+Flask==3.0.3
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.0.3
 idna==3.7
-iniconfig==2.0.0
-outcome==1.3.0.post0
-packaging==24.0
-pluggy==1.5.0
-pycparser==2.22
-PySocks==1.7.1
-pytest==8.2.1
-selenium==4.21.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-tomli==2.0.1
-trio==0.25.1
-trio-websocket==0.11.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+SQLAlchemy==2.0.30
 typing_extensions==4.12.0
-urllib3==2.2.1
-wsproto==1.2.0
+Werkzeug==3.0.3
+WTForms==3.1.2
+psycopg2-binary==2.9.1
