Adding ChromeDriver installation to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,11 +38,19 @@ jobs:
           pip install -r requirements.txt
           pip install -r test-requirements.txt
 
+      - name: Download ChromeDriver
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip
+          wget -N https://chromedriver.storage.googleapis.com/125.0.6422.141/chromedriver_linux64.zip -P ~/Downloads
+          unzip ~/Downloads/chromedriver_linux64.zip -d ~/Downloads
+          sudo mv -f ~/Downloads/chromedriver /usr/local/bin/chromedriver
+          sudo chmod +x /usr/local/bin/chromedriver
+
       - name: Initialize database
         run: |
           source venv/bin/activate
-          sudo apt-get install -y libpq-dev
-          pip install psycopg2
+          pip install psycopg2-binary
           if [ ! -d "migrations" ]; then
             flask db init
             flask db migrate -m "Initial migration."
@@ -54,4 +62,4 @@ jobs:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
         run: |
           source venv/bin/activate
-          pytest
+          pytest tests
