--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y unzip
-          wget -N https://chromedriver.storage.googleapis.com/125.0.6422.141/chromedriver_linux64.zip -P ~/Downloads
+          wget -N https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip -P ~/Downloads
           unzip ~/Downloads/chromedriver_linux64.zip -d ~/Downloads
           sudo mv -f ~/Downloads/chromedriver /usr/local/bin/chromedriver
           sudo chmod +x /usr/local/bin/chromedriver
