--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,11 @@ jobs:
           fi
           flask db upgrade
 
+      - name: Populate database
+        run: |
+            source venv/bin/activate
+            python add_products.py
+            
       - name: Start Flask application
         run: |
           source venv/bin/activate
