Debug permission error

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
             flask db migrate -m "Initial migration."
           fi
           flask db upgrade
+      
+      - name: Set ChromeDriver executable permissions
+        run: chmod +x ./drivers/chromedriver
 
       - name: Populate database
         run: |
