--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,28 @@ jobs:
           source venv/bin/activate
           pip install -r requirements.txt
           pip install -r test-requirements.txt
+          
+      - name: Install Google Chrome
+        run: |
+          wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+          sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+
+      - name: Install ChromeDriver
+        run: |
+          CHROMEDRIVER_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
+          echo "Installing ChromeDriver version $CHROMEDRIVER_VERSION"
+          wget -N https://storage.googleapis.com/chrome-for-testing-public/$CHROMEDRIVER_VERSION/linux64/chrome-linux64.zip
+          unzip chromedriver_linux64.zip
+          mv ~/Downloads/chromedriver drivers/chromedriver
+          chmod +x drivers/chromedriver
 
       - name: Log Google Chrome version
         run: google-chrome --version
+
+      - name: Log ChromeDriver version
+        run: chromedriver --version
 
       - name: Initialize database
         run: |
@@ -44,9 +63,6 @@ jobs:
             flask db migrate -m "Initial migration."
           fi
           flask db upgrade
-      
-      - name: Set ChromeDriver executable permissions
-        run: chmod +x ./drivers/chromedriver
 
       - name: Populate database
         run: |
