--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
           source venv/bin/activate
           pip install -r requirements.txt
           pip install -r test-requirements.txt
-          
+
       - name: Install Google Chrome
         run: |
           wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
@@ -66,7 +66,7 @@ jobs:
         run: google-chrome --version
 
       - name: Log ChromeDriver version
-        run: chromedriver --version
+        run: drivers/chromedriver --version
 
       - name: Initialize database
         run: |
